--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <gson.version>2.8.6</gson.version>
         <gson-fire.version>1.8.3</gson-fire.version>
+
+        <sonar.coverage.exclusions>
+            **/example/**/*,
+            **/executor/**/*
+        </sonar.coverage.exclusions>
     </properties>
 
     <dependencies>
