--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -18,11 +18,13 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <openapi-generator.version>4.2.3</openapi-generator.version>
+        <openapi-generator.version>4.3.1</openapi-generator.version>
         <oauth1-signer.version>1.2.1</oauth1-signer.version>
+        <client-encryption.version>1.4.0</client-encryption.version>
+        <nimbusds-jose-jwt.version>8.19</nimbusds-jose-jwt.version>
         <okhttp3.version>3.14.2</okhttp3.version>
-        <swagger-parser.version>2.0.18</swagger-parser.version>
-        <commons-lang3.version>3.9</commons-lang3.version>
+        <swagger-parser.version>2.0.20</swagger-parser.version>
+        <commons-lang3.version>3.10</commons-lang3.version>
         <gson.version>2.8.6</gson.version>
         <gson-fire.version>1.8.3</gson-fire.version>
     </properties>
@@ -41,6 +43,20 @@
             <groupId>com.mastercard.developer</groupId>
             <artifactId>oauth1-signer</artifactId>
             <version>${oauth1-signer.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.mastercard.developer/client-encryption -->
+        <dependency>
+            <groupId>com.mastercard.developer</groupId>
+            <artifactId>client-encryption</artifactId>
+            <version>${client-encryption.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>${nimbusds-jose-jwt.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
@@ -89,6 +105,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
