--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,27 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.3.RELEASE</version>
+        <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.mastercard.developer</groupId>
     <artifactId>loyalty-user-management-reference</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
     <name>loyalty-user-management-reference</name>
     <description>Reference Application for Loyalty User Management API</description>
 
     <properties>
         <java.version>1.8</java.version>
-        <openapi-generator.version>4.3.1</openapi-generator.version>
-        <oauth1-signer.version>1.5.0</oauth1-signer.version>
+        <openapi-generator.version>5.3.1</openapi-generator.version>
+        <oauth1-signer.version>1.5.1</oauth1-signer.version>
         <client-encryption.version>1.5.0</client-encryption.version>
         <nimbusds-jose-jwt.version>9.0</nimbusds-jose-jwt.version>
-        <okhttp3.version>4.9.0</okhttp3.version>
-        <swagger-parser.version>2.0.21</swagger-parser.version>
-        <commons-lang3.version>3.11</commons-lang3.version>
-        <gson.version>2.8.6</gson.version>
-        <gson-fire.version>1.8.4</gson-fire.version>
+        <okhttp3.version>4.9.3</okhttp3.version>
+        <swagger-parser.version>2.0.28</swagger-parser.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
+        <gson.version>2.8.9</gson.version>
+        <gson-fire.version>1.8.5</gson-fire.version>
     </properties>
 
     <dependencies>
@@ -141,6 +141,7 @@
                 <version>${openapi-generator.version}</version>
                 <executions>
                     <execution>
+                        <id>Loyalty User Management API Client</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
